step-framework-collections/src/main/java/step/core/ql/OQLParser.java
/*******************************************************************************
 * Copyright (C) 2020, exense GmbH
 *
 * This file is part of STEP
 *
 * STEP is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * STEP is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with STEP.  If not, see <http://www.gnu.org/licenses/>.
 ******************************************************************************/
// Generated from OQL.g4 by ANTLR 4.5.3

package step.core.ql;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OQLParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        EQ = 1, NEQ = 2, REGEX = 3, OR = 4, AND = 5, IN = 6, INCLUDES = 7, IS = 8, NOT = 9, NULL_LITERAL = 10,
        LT = 11, LTE = 12, GT = 13, GTE = 14, OPAR = 15, CPAR = 16, COMMA = 17, NONQUOTEDSTRING = 18,
        STRING = 19, SPACE = 20;
    public static final int
        RULE_parse = 0, RULE_expr = 1, RULE_atom = 2;
    public static final String[] ruleNames = {
        "parse", "expr", "atom"
    };

    private static final String[] _LITERAL_NAMES = {
        null, "'='", "'!='", "'~'", "'or'", "'and'", "'in'", "'includes'", "'is'",
        "'not'", "'null'", "'<'", "'<='", "'>'", "'>='", "'('", "')'", "','"
    };
    private static final String[] _SYMBOLIC_NAMES = {
        null, "EQ", "NEQ", "REGEX", "OR", "AND", "IN", "INCLUDES", "IS", "NOT",
        "NULL_LITERAL", "LT", "LTE", "GT", "GTE", "OPAR", "CPAR", "COMMA", "NONQUOTEDSTRING",
        "STRING", "SPACE"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "OQL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public OQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ParseContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(OQLParser.EOF, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public ParseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parse;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterParse(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitParse(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitParse(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParseContext parse() throws RecognitionException {
        ParseContext _localctx = new ParseContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_parse);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(7);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << OPAR) | (1L << NONQUOTEDSTRING) | (1L << STRING))) != 0)) {
                    {
                        setState(6);
                        expr(0);
                    }
                }

                setState(9);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprContext extends ParserRuleContext {
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        public ExprContext() {
        }

        public void copyFrom(ExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class IsNotNullExprContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode IS() {
            return getToken(OQLParser.IS, 0);
        }

        public TerminalNode NOT() {
            return getToken(OQLParser.NOT, 0);
        }

        public TerminalNode NULL_LITERAL() {
            return getToken(OQLParser.NULL_LITERAL, 0);
        }

        public IsNotNullExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterIsNotNullExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitIsNotNullExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitIsNotNullExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class NotExprContext extends ExprContext {
        public TerminalNode NOT() {
            return getToken(OQLParser.NOT, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public NotExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterNotExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitNotExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitNotExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class InExprContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode IN() {
            return getToken(OQLParser.IN, 0);
        }

        public TerminalNode OPAR() {
            return getToken(OQLParser.OPAR, 0);
        }

        public TerminalNode CPAR() {
            return getToken(OQLParser.CPAR, 0);
        }

        public List<TerminalNode> STRING() {
            return getTokens(OQLParser.STRING);
        }

        public TerminalNode STRING(int i) {
            return getToken(OQLParser.STRING, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(OQLParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(OQLParser.COMMA, i);
        }

        public InExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterInExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitInExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitInExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class IsNullExprContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode IS() {
            return getToken(OQLParser.IS, 0);
        }

        public TerminalNode NULL_LITERAL() {
            return getToken(OQLParser.NULL_LITERAL, 0);
        }

        public IsNullExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterIsNullExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitIsNullExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitIsNullExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AtomExprContext extends ExprContext {
        public AtomContext atom() {
            return getRuleContext(AtomContext.class, 0);
        }

        public AtomExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterAtomExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitAtomExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitAtomExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class OrExprContext extends ExprContext {
        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode OR() {
            return getToken(OQLParser.OR, 0);
        }

        public OrExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterOrExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitOrExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitOrExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ComparisonExprContext extends ExprContext {
        public Token op;

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode LT() {
            return getToken(OQLParser.LT, 0);
        }

        public TerminalNode LTE() {
            return getToken(OQLParser.LTE, 0);
        }

        public TerminalNode GT() {
            return getToken(OQLParser.GT, 0);
        }

        public TerminalNode GTE() {
            return getToken(OQLParser.GTE, 0);
        }

        public ComparisonExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterComparisonExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitComparisonExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitComparisonExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class EqualityExprContext extends ExprContext {
        public Token op;

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode EQ() {
            return getToken(OQLParser.EQ, 0);
        }

        public TerminalNode NEQ() {
            return getToken(OQLParser.NEQ, 0);
        }

        public TerminalNode REGEX() {
            return getToken(OQLParser.REGEX, 0);
        }

        public EqualityExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterEqualityExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitEqualityExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitEqualityExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class IncludesExprContext extends ExprContext {
        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode INCLUDES() {
            return getToken(OQLParser.INCLUDES, 0);
        }

        public IncludesExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterIncludesExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitIncludesExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitIncludesExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AndExprContext extends ExprContext {
        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode AND() {
            return getToken(OQLParser.AND, 0);
        }

        public AndExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterAndExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitAndExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitAndExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }

    private ExprContext expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExprContext _localctx = new ExprContext(_ctx, _parentState);
        ExprContext _prevctx = _localctx;
        int _startState = 2;
        enterRecursionRule(_localctx, 2, RULE_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(15);
                switch (_input.LA(1)) {
                    case NOT: {
                        _localctx = new NotExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(12);
                        match(NOT);
                        setState(13);
                        expr(10);
                    }
                    break;
                    case OPAR:
                    case NONQUOTEDSTRING:
                    case STRING: {
                        _localctx = new AtomExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(14);
                        atom();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(55);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(53);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                                case 1: {
                                    _localctx = new EqualityExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(17);
                                    if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
                                    setState(18);
                                    ((EqualityExprContext) _localctx).op = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NEQ) | (1L << REGEX))) != 0))) {
                                        ((EqualityExprContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        consume();
                                    }
                                    setState(19);
                                    expr(10);
                                }
                                break;
                                case 2: {
                                    _localctx = new ComparisonExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(20);
                                    if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
                                    setState(21);
                                    ((ComparisonExprContext) _localctx).op = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << LTE) | (1L << GT) | (1L << GTE))) != 0))) {
                                        ((ComparisonExprContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        consume();
                                    }
                                    setState(22);
                                    expr(9);
                                }
                                break;
                                case 3: {
                                    _localctx = new IncludesExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(23);
                                    if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
                                    setState(24);
                                    match(INCLUDES);
                                    setState(25);
                                    expr(8);
                                }
                                break;
                                case 4: {
                                    _localctx = new AndExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(26);
                                    if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
                                    setState(27);
                                    match(AND);
                                    setState(28);
                                    expr(7);
                                }
                                break;
                                case 5: {
                                    _localctx = new OrExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(29);
                                    if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                    setState(30);
                                    match(OR);
                                    setState(31);
                                    expr(6);
                                }
                                break;
                                case 6: {
                                    _localctx = new InExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(32);
                                    if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(33);
                                    match(IN);
                                    setState(34);
                                    match(OPAR);
                                    setState(43);
                                    _la = _input.LA(1);
                                    if (_la == STRING) {
                                        {
                                            setState(35);
                                            match(STRING);
                                            setState(40);
                                            _errHandler.sync(this);
                                            _la = _input.LA(1);
                                            while (_la == COMMA) {
                                                {
                                                    {
                                                        setState(36);
                                                        match(COMMA);
                                                        setState(37);
                                                        match(STRING);
                                                    }
                                                }
                                                setState(42);
                                                _errHandler.sync(this);
                                                _la = _input.LA(1);
                                            }
                                        }
                                    }

                                    setState(45);
                                    match(CPAR);
                                }
                                break;
                                case 7: {
                                    _localctx = new IsNotNullExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(46);
                                    if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(47);
                                    match(IS);
                                    setState(48);
                                    match(NOT);
                                    setState(49);
                                    match(NULL_LITERAL);
                                }
                                break;
                                case 8: {
                                    _localctx = new IsNullExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(50);
                                    if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(51);
                                    match(IS);
                                    setState(52);
                                    match(NULL_LITERAL);
                                }
                                break;
                            }
                        }
                    }
                    setState(57);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class AtomContext extends ParserRuleContext {
        public AtomContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_atom;
        }

        public AtomContext() {
        }

        public void copyFrom(AtomContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ParExprContext extends AtomContext {
        public TerminalNode OPAR() {
            return getToken(OQLParser.OPAR, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode CPAR() {
            return getToken(OQLParser.CPAR, 0);
        }

        public ParExprContext(AtomContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterParExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitParExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitParExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class StringAtomContext extends AtomContext {
        public TerminalNode STRING() {
            return getToken(OQLParser.STRING, 0);
        }

        public StringAtomContext(AtomContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterStringAtom(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitStringAtom(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitStringAtom(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class NonQuotedStringAtomContext extends AtomContext {
        public TerminalNode NONQUOTEDSTRING() {
            return getToken(OQLParser.NONQUOTEDSTRING, 0);
        }

        public NonQuotedStringAtomContext(AtomContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).enterNonQuotedStringAtom(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OQLListener) ((OQLListener) listener).exitNonQuotedStringAtom(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OQLVisitor) return ((OQLVisitor<? extends T>) visitor).visitNonQuotedStringAtom(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AtomContext atom() throws RecognitionException {
        AtomContext _localctx = new AtomContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_atom);
        try {
            setState(64);
            switch (_input.LA(1)) {
                case OPAR:
                    _localctx = new ParExprContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(58);
                    match(OPAR);
                    setState(59);
                    expr(0);
                    setState(60);
                    match(CPAR);
                }
                break;
                case NONQUOTEDSTRING:
                    _localctx = new NonQuotedStringAtomContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(62);
                    match(NONQUOTEDSTRING);
                }
                break;
                case STRING:
                    _localctx = new StringAtomContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(63);
                    match(STRING);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 1:
                return expr_sempred((ExprContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean expr_sempred(ExprContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 9);
            case 1:
                return precpred(_ctx, 8);
            case 2:
                return precpred(_ctx, 7);
            case 3:
                return precpred(_ctx, 6);
            case 4:
                return precpred(_ctx, 5);
            case 5:
                return precpred(_ctx, 4);
            case 6:
                return precpred(_ctx, 3);
            case 7:
                return precpred(_ctx, 2);
        }
        return true;
    }

    public static final ATN _ATN =
        new ATNDeserializer().deserialize(_serializedATN.toCharArray());

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }
}
